Fixes overlap of album title on mid size screen

--- a/app/styles/album.css
+++ b/app/styles/album.css
@@ -9,6 +9,7 @@
      position: relative;
      top: 1.5rem;
      padding: 1rem;
+     text-align: center;
  }
 
  .album-view-details .album-view-title {
